--- a/roles/firewall/tasks/main.yaml
+++ b/roles/firewall/tasks/main.yaml
@@ -12,35 +12,6 @@
       ansible.builtin.apt:
         name: ufw
         state: present
-
-    - name: Disable ufw
-      community.general.ufw:
-        state: disabled
-
-    - name: Allow outgoing traffic
-      community.general.ufw:
-        policy: allow
-        direction: outgoing
-
-    - name: Deny incoming traffic
-      community.general.ufw:
-        policy: deny
-        direction: incoming
-
-    - name: Allow http, https
-      community.general.ufw:
-        rule: allow
-        port: "{{ item }}"
-      loop:
-        - http
-        - https
-
-    - name: Limit ssh
-      community.general.ufw:
-        rule: limit
-        port: "{{ ssh_port }}"
-
-    - name: Enable ufw
-      community.general.ufw:
-        state: enabled
+      notify:
+        - "Configure ufw"
   become: true
