--- a/roles/firewall/tasks/main.yaml
+++ b/roles/firewall/tasks/main.yaml
@@ -2,7 +2,8 @@
 ---
 - name: Install and setup ufw
   block:
-    - ansible.builtin.import_role:
+    - name: Update apt packages
+      ansible.builtin.import_role:
         name: update-packages
 
     - name: Install ufw
