--- a/roles/podman/tasks/main.yaml
+++ b/roles/podman/tasks/main.yaml
@@ -2,7 +2,8 @@
 ---
 - name: Install, configure and setup podman and compose
   block:
-    - ansible.builtin.import_role:
+    - name: Update apt packages
+      ansible.builtin.import_role:
         name: update-packages
 
     - name: Install podman
