add description to site.yaml

--- a/site.yaml
+++ b/site.yaml
@@ -1,3 +1,4 @@
 # code: language=ansible
 ---
-- ansible.builtin.import_playbook: remote_webservers.yaml
+- name: Playbook entrypoint
+  ansible.builtin.import_playbook: remote_webservers.yaml
