--- a/roles/unattended_upgrades/tasks/main.yaml
+++ b/roles/unattended_upgrades/tasks/main.yaml
@@ -5,7 +5,7 @@
   block:
     - name: Update apt packages
       ansible.builtin.import_role:
-        name: update-packages
+        name: update_packages
 
     - name: Install unattended update packages
       ansible.builtin.apt:
