Feature/add ansible lint action (#3)
* chore: include workflows

* ci: add linter actions

* fix: add requirements file

* fix: rename file extension

* fix: mv requirements file to roles

* fix: change collections syntax

* style: apply format

* fix: add description

* fix: change key-order

* add description to site.yaml

* fix: set permissions

* fix: rename roles, replace minus to underscore

* fix: add eol

* fix: replace minus to underscore

* ci: update actions

* fix: quote mode

* fix: change to booleans

* fix: add become flag

* ci: add ansible lint config

* fix: change to file, rename yaml

* fix: add ansible.posix

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,9 @@
 !README.md
 !*.yaml
 !roles
+!roles/requirements.yml
 !roles/**/
 !roles/**/templates/*.j2
+!.github
+!.github/workflows/
+!.ansible-lint
