--- a/remote_webservers.yaml
+++ b/remote_webservers.yaml
@@ -1,7 +1,8 @@
 # code: language=ansible
 ---
 - hosts: remote
+  name: Playbook for VPS
   roles:
     - podman
     - firewall
-    - unattended-upgrades
+    - unattended_upgrades
