--- a/roles/podman/tasks/main.yaml
+++ b/roles/podman/tasks/main.yaml
@@ -1,10 +1,11 @@
 # code: language=ansible
 ---
 - name: Install, configure and setup podman and compose
+  become: true
   block:
     - name: Update apt packages
       ansible.builtin.import_role:
-        name: update-packages
+        name: update_packages
 
     - name: Install podman
       ansible.builtin.apt:
@@ -21,4 +22,3 @@
         mode: a+x
       notify:
         - Enable and configure podman socket
-  become: true
