--- a/roles/unattended_upgrades/tasks/main.yaml
+++ b/roles/unattended_upgrades/tasks/main.yaml
@@ -1,10 +1,11 @@
 # code: language=ansible
 ---
 - name: Install and configure unattended upgrades
+  become: true
   block:
     - name: Update apt packages
       ansible.builtin.import_role:
-        name: update-packages
+        name: update_packages
 
     - name: Install unattended update packages
       ansible.builtin.apt:
@@ -12,4 +13,3 @@
           - unattended-upgrades
           - apt-listchanges
         state: present
-  become: true
